--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,12 @@ __pycache__/
 
 # C extensions
 *.so
-data\outputs
+
+data/outputs
+data/ready
+
+data/outputs/*
+
 # Distribution / packaging
 .Python
 build/
